--- a/settings.ini
+++ b/settings.ini
@@ -7,8 +7,8 @@
 ; join -- Join .h and .cpp nodes. [true, false]
 
 [settings]
-folder = C:\Users\maksi\Desktop\Summer_2019\Practice\Typing-Analysis\Qt-project\TypingAnalysis
-output = C:\Users\maksi\Desktop\Summer_2019\Practice\dependency-graph\example
+folder =
+output = 
 filename = dependency_graph
 format = pdf
 view = true
@@ -26,6 +26,5 @@ join = false
 [colors]
 STL = deeppink1
 Windows API = royalblue
-C:\Users\maksi\Desktop\Summer_2019\Practice\Typing-Analysis\Qt-project\TypingAnalysis = aquamarine2
 
 [ignore]
