--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
-; folder -- Path to the folder to scan.
-; output -- Path to the output folder.
+; folder -- Path to the folder to scan. Example: C:\Users\admin\Project.
+; output -- Path to the output file.
 ; filename -- Filename of the output file without extension
 ; format  -- Format of the ouput file. [bmp, gif, jpg, png, pdf, svg]
 ; view -- View the graph. [true, false]
